# sign-in

./: README.md  debug_linuxdo_login.py  linuxdo_browse.py  linuxdo_scheduler.py  main.py  pyproject.toml  test_linuxdo_nodriver.py  test_run.py  中转站汇总.md
.github/workflows/: anyrouter-only.yml  daily-check-in.yml  linuxdo-browse.yml  linuxdo-only.yml  newapi-check-in.yml  newapi-daily-check-in.yml
000/: LINUXDO_ACCOUNTS样例.json  NEWAPI_ACCOUNTS样例.json  可用站点列表.md  看我.md
browser_data/newapi_extractor/: Last Browser  Local State
browser_data/newapi_extractor/Default/: DIPS  Preferences  Secure Preferences  Web Data
browser_data/newapi_extractor/Default/DawnGraphiteCache/: index
browser_data/newapi_extractor/Default/DawnWebGPUCache/: index
browser_data/newapi_extractor/Default/Extension Rules/: LOG
browser_data/newapi_extractor/GrShaderCache/: data_0  data_1  index
browser_data/newapi_extractor/GraphiteDawnCache/: index
browser_data/newapi_extractor/ShaderCache/: index
drission_profile/: Local State
drission_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
drission_profile/Default/DawnGraphiteCache/: data_1  index
drission_profile/Default/DawnWebGPUCache/: data_1  index
drission_profile/Default/Extension Rules/: LOG
drission_profile/Default/Extension Scripts/: LOG
drission_profile/Default/Extension State/: LOG  LOG.old
drission_profile/Default/GCM Store/: LOG  LOG.old
drission_profile/Default/GPUCache/: data_1  index
drission_profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
drission_profile/Default/Session Storage/: LOG  LOG.old
drission_profile/Default/Sessions/: Session_13414357038038152  Session_13414357225109431  Tabs_13414357203895973  Tabs_13414357225340997
drission_profile/Default/Site Characteristics Database/: LOG  LOG.old
drission_profile/Default/WebStorage/: QuotaManager
drission_profile/Default/shared_proto_db/: LOG  LOG.old
drission_profile/GrShaderCache/: data_1  index
drission_profile/GraphiteDawnCache/: data_1  index
drission_profile/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13414357170114796  ChromeExtMalware.store.32_13414357478513985  UrlBilling.store  UrlBilling.store.4_13414357478527806  UrlCsdAllowlist.store  UrlCsdAllowlist.store.4_13414357478535814  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlHighConfidenceAllowlist.store.32_13414357478487124  UrlMalBin.store  UrlMalBin.store.4_13414357478509348  UrlMalware.store  UrlMalware.store.4_13414357170092208  UrlSoceng.store  UrlSoceng.store.4_13414357170082663  UrlSoceng.store.4_13414357478475945  UrlSubresourceFilter.store  UrlSubresourceFilter.store.4_13414357170136481  UrlSubresourceFilter.store.4_13414357478542764  UrlSuspiciousSite.store  UrlSuspiciousSite.store.4_13414357170105364  UrlUws.store  UrlUws.store.4_13414357170099331  UrlUws.store.4_13414357478499522
drission_profile/ShaderCache/: data_1  index
drission_profile/component_crx_cache/: metadata.json
drission_profile/segmentation_platform/: ukm_db
scripts/: README.md  newapi_extractor.user.js  newapi_extractor_browser.py  newapi_full_extractor.py  newapi_info_extractor.py
scripts/chrome_extension/: README.md  failed_sites.json  manifest.json  merge.html  merge.js  popup.html  popup.js
utils/: __init__.py  browser.py  config.py  failure_tracker.py  notify.py
心得/: 绕过Cloudflare心得.md
日志/: anyonly.txt
(+262 files in other folders)
